--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,6 @@ executors:
     docker:
       - image: rslota/beam-builder:erlang-<< parameters.erlang_version >>_elixir-<< parameters.elixir_version >>
       - image: mongooseim/fcm-mock-server
-        command: docker run -p 4000:4000 -p 4001:4001 --name fcm --network n mongooseim/fcm-mock-server
       - image: mobify/apns-http2-mock-server
     working_directory: ~/app
     environment:
@@ -195,6 +194,10 @@ jobs:
       - run:
           name: Build docker image
           command: docker build -f Dockerfile.release --build-arg MIX_ENV=prod -t $DOCKERHUB_REPOSITORY/$DOCKER_IMAGE:$DOCKER_TAG .
+      - save_cache:
+          key: certs-cache-{{ .Environment.CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - "priv/"
 
   integration-tests:
     executor:
@@ -204,11 +207,36 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
+      - restore_cache:
+          keys:
+            - mix-cache-{{ .Environment.CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
+            - certs-cache-{{ .Environment.CACHE_VERSION }}-{{ .Branch }}-{{ .Revision }}
       - run: *DOCKER_TAGS
-      - run:
-          name: Run integration tests
-          command: ./integration.sh
-      - run: MIX_ENV=integration mix do certs.dev, test test/api test/api/v3_fcm_test.ex
+      - run: |
+          docker network create integration && \
+          docker create \
+              -v /opt/app/priv \
+              -v /deps \
+              --name volumes alpine:3.4 /bin/true && \
+          docker cp `pwd`/priv volumes:/opt/app/priv && \
+          docker cp `pwd`/deps volumes:~/deps && \
+          docker run --name beam-builder \
+              --volumes-from volumes \
+              --network integration \
+              rslota/beam-builder:erlang-<< parameters.erlang_version >>_elixir-<< parameters.elixir_version >> && \
+          docker run -p 4000:4000 -p 4001:4001 --name fcm --network integration mongooseim/fcm-mock-server && \
+          docker run --name MPush \
+              --volumes-from volumes \
+              --network integration \
+              -e PUSH_FCM_ENABLED=true \
+              -e PUSH_FCM_PORT=4000 \
+              -e PUSH_FCM_ENDPOINT="fcm" \
+              -e PUSH_APNS_ENABLED=false \
+              -e TLS_SERVER_CERT_VALIDATION=false \
+              -e FCM_AUTH_ENDPOINT="http://fcm:4001" \
+              -p 8443:8443 \
+              $DOCKER_IMAGE:$DOCKER_TAG && \
+         docker exec beam-builder MIX_ENV=integration mix test test/api test/api/v3_fcm_test.ex
 
   push-to-dockerhub:
     executor:
