--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,15 +218,13 @@ jobs:
       - run:
           name: create volumes
           command: |
-              docker create \
+              docker create
                   -v /opt/app/priv \
                   -v /deps \
                   --name volumes alpine:3.4 /bin/true
-      - run:
-          name: copy the stuff into the modules
-          command: |
-              docker cp `pwd`/priv volumes:/opt/app/priv && \
-              docker cp `pwd`/deps volumes:/opt/app/deps
+              docker cp `pwd`/priv volumes:/opt/app
+              docker cp `pwd`/deps volumes:/opt/app
+              docker run --volumes-from configs app-image:1.2.3
       - run:
           name: fcm
           command: |
