--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,8 +223,7 @@ jobs:
                   -v /deps \
                   --name volumes alpine:3.4 /bin/true
               docker cp `pwd`/priv volumes:/opt/app
-              docker cp `pwd`/deps volumes:/opt/app
-              docker cp `pwd`/app volumes:/beam-builder
+              docker cp `pwd` volumes:/beam-builder
       - run:
           name: fcm
           command: |
